# robo

./: README.md
arctic_landscape/: .gitignore
arctic_landscape/arctic_console_controller/: CMakeLists.txt  package.xml
arctic_landscape/arctic_console_controller/include/: getch.h
arctic_landscape/arctic_console_controller/src/: arctic_console_controller_main.cpp  getch.cpp
arctic_landscape/arctic_model_description/: CMakeLists.txt  package.xml
arctic_landscape/arctic_model_description/launch/: test_urdf.launch
arctic_landscape/arctic_model_description/meshes/: PlatformV2.stl  PlatformV3.dae  arctic_platform.blend  arctic_platform.dae  manip_end.dae
arctic_landscape/arctic_model_description/rviz/: arctic_model.rviz
arctic_landscape/arctic_model_description/urdf/: arctic_model.xacro  static_camera.xacro
arctic_landscape/arctic_model_gazebo/: CMakeLists.txt  README.md  package.xml
arctic_landscape/arctic_model_gazebo/config/: arctic_control.yaml  get_images_config.json
arctic_landscape/arctic_model_gazebo/launch/: arctic_gazebo.launch  arctic_model_only.launch  arctic_semiotic.launch  arctic_semiotic_soar.launch  arctic_static_camera.launch  spawn_robot_controllers.launch
arctic_landscape/arctic_model_gazebo/scripts/: gen_objects_description.py  get_images_set.py
arctic_landscape/arctic_model_gazebo/share/: _by_gaze_line.dae  _detected.dae  _gaze_on.dae  _important.dae  _in_processing.dae  _processed.dae  barrier.dae  broken_tree.dae  butte.dae  car.dae  column.dae  fissure.dae  forest.dae  hill.dae  house.dae  human.dae  hummock.dae  lamp_post.dae  man_lay.dae  map.xml  me.dae  pit.dae  point.dae  rock.dae  stone_set.dae  tree.dae
arctic_landscape/arctic_model_gazebo/worlds/: arctic2.world  arctic3.world
arctic_landscape/gazebo_robot_driver/: CMakeLists.txt  package.xml
arctic_landscape/gazebo_robot_driver/scripts/: publish_free_joints.py
arctic_landscape/gazebo_robot_driver/src/: gazebo_robot_driver_node.cpp
arctic_landscape/models/platform_to_follow/: follow_platform.dae  model.config  model.sdf
arctic_landscape/obstMapCreator/: README.md  requirements.txt
arctic_landscape/obstMapCreator/config/: map_config.yaml  map_description.xml
arctic_landscape/obstMapCreator/scripts/: dae_processing.py  gen_map.py  gen_xml_map.py
arctic_landscape/target_vehicle_control/: CMakeLists.txt  package.xml
arctic_landscape/target_vehicle_control/config/: target_control.yaml  target_cycle.track
arctic_landscape/target_vehicle_control/config/navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
arctic_landscape/target_vehicle_control/launch/: target_vehicle.launch
arctic_landscape/target_vehicle_control/scripts/: arctic_demo_script.py
arctic_landscape/target_vehicle_description/: CMakeLists.txt  package.xml
arctic_landscape/target_vehicle_description/launch/: test_urdf.launch
arctic_landscape/target_vehicle_description/meshes/: follow_platform.dae  target_vehicle.blend  target_vehicle.dae
arctic_landscape/target_vehicle_description/rviz/: target_vehicle.rviz
arctic_landscape/target_vehicle_description/urdf/: target_vehicle.xacro
arctic_robot/: README.md
arctic_robot/action_follow/: CMakeLists.txt  package.xml
arctic_robot/action_follow/action/: FollowTF.action
arctic_robot/action_follow/launch/: test.launch
arctic_robot/action_follow/src/: action_follow_node.py
arctic_robot/arctic_config/: CMakeLists.txt  README.md  package.xml
arctic_robot/arctic_config/config/: arctic.rviz  left.yaml  left_cam_calib_params.yaml  right.yaml  right_cam_calib_params.yaml
arctic_robot/arctic_config/launch/: arctic_bringup.launch  arctic_software.launch  gazebo_client.launch  record_data.launch  rviz.launch  stereo_test.launch  trajectory_navigation.launch  user_interface_output.launch
arctic_robot/arctic_config/rviz/: stereo_test.rviz
arctic_robot/arctic_config/scripts/: export_to_csv.sh  extra_install.bash  gz_script.bash  record_data.sh  reset_model.py
arctic_robot/arctic_config/scripts/rdf_commands/: continue.sh  follow_car.sh  go_to_car.sh  go_to_human.sh  patrol_m1.sh  stop.sh
arctic_robot/arctic_config/share/rdf/: analyze_closest_rock.rdf  continue.rdf  follow_car.rdf  go_to_closest_car.rdf  go_to_closest_human.rdf  multiple_human_detections.rdf  patrol.rdf  pause.rdf  stop.rdf
arctic_robot/arctic_config/share/routes/: m1.track  m2.track
arctic_robot/arctic_manip_service/: CMakeLists.txt  package.xml
arctic_robot/arctic_manip_service/src/: arctic_manip_service_node.py
arctic_robot/arctic_manip_service/srv/: ArcticManipMoveTo.srv
arctic_robot/basic_movements_actions/: CMakeLists.txt  package.xml
arctic_robot/basic_movements_actions/action/: MoveDir.action  MoveOn.action  RotateOn.action
arctic_robot/basic_movements_actions/src/: basic_movements_actions_node.py
arctic_robot/test_robot_teleporter/: CMakeLists.txt  package.xml
arctic_robot/test_robot_teleporter/src/: test_robot_teleporter_node.py
arctic_robot/test_robot_teleporter/tests/: test_client.py
arctic_robot/textctl/: CMakeLists.txt  package.xml  setup.py
arctic_robot/textctl/scripts/: example.txt  textctl_client.py  textctl_server.py
arctic_robot/textctl/src/: textctl.cpp
arctic_robot/textctl/src/textctl/: parser.out  parser.py  parsetab.py
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/custom_global_planner/: .catkin  .rosinstall  setup.sh
devel/.private/odom_gazebo_republisher/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/test_robot_config/: .catkin  .rosinstall  setup.sh
devel/.private/test_robot_description/: .catkin  .rosinstall
devel/lib/odom_gazebo_republisher/: odom_republisher.py
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  custom_global_planner.pc  odom_gazebo_republisher.pc  test_robot_config.pc  (+1 more)
logs/custom_global_planner/: build.cmake.000.log.stderr  build.make.005.log.stderr  build.make.009.log.stderr
(+121 files in other folders)
