<?xml version="1.0"?>
<package format="2">
  <name>arctic_model_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo modelling package for the arctic robot</description>

  <maintainer email="petr.sorokoumov@gmail.com">Petr Sorokoumov</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>arctic_model_description</depend>
  <depend>velocity_controllers</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
