<?xml version="1.0"?>
<package format="2">
  <name>gazebo_robot_driver</name>
  <version>0.1.0</version>
	<description>Transforms messages to and from the model of robot. Compatible with robot_driver</description>

  <maintainer email="petr.sorokoumov@gmail.com">ps</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>cmake_modules</build_depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>gazebo_msgs</exec_depend>
	<exec_depend>tf</exec_depend>
</package>
