<?xml version="1.0"?>
<package format='2'>
  <name>target_vehicle_description</name>
  <version>0.0.0</version>
  <description>Target for the arctic robot to follow</description>

  <maintainer email="petr.sorokoumov@gmail.com">Petr Sorokoumov</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
