<?xml version="1.0"?>
<package format="2">
  <name>test_robot_teleporter</name>
  <version>1.0.0</version>
  <description>
    Text interface for the system
  </description>

  <maintainer email="petr.sorokoumov@gmail.com">PS</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>gazebo_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
</package>
