<?xml version="1.0"?>
<package format="2">
  <name>textctl</name>
  <version>1.0.0</version>
  <description>
    Text interface for the system
  </description>

  <maintainer email="petr.sorokoumov@gmail.com">PS</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
</package>
